clara (0.20151116) UNRELEASED; urgency=medium

  * 'clara repo sync': add a configuration parameter to choose the method
    that debmirror should use to download files.

 -- Ana Guerrero <ana-externe.guerrero@edf.fr>  Tue, 29 Sep 2015 15:07:50 +0200

clara (0.20150929+c7+1) calibre7; urgency=medium

  * Backport for Calibre7 / Athos.

 -- Ana Guerrero <ana-externe.guerrero@edf.fr>  Tue, 29 Sep 2015 15:08:58 +0200

clara (0.20150929) calibre9; urgency=medium

  * 'clara ipmi': add the option -p to run the ipmi commands in parallel.
  * Documentation updates.

 -- Ana Guerrero <ana-externe.guerrero@edf.fr>  Tue, 29 Sep 2015 15:07:50 +0200

clara (0.20150915+c7+1) calibre7; urgency=medium

  * Backport for Calibre7 / Athos.

 -- Ana Guerrero <ana-externe.guerrero@edf.fr>  Tue, 15 Sep 2015 14:49:59 +0200

clara (0.20150915) calibre9; urgency=medium

  * Fix compatibility with Python2.6

 -- Ana Guerrero <ana-externe.guerrero@edf.fr>  Tue, 15 Sep 2015 14:47:42 +0200

clara (0.20150911+c7+1) calibre7; urgency=medium

  * Backport for Calibre7 / Athos.

 -- Ana Guerrero <ana-externe.guerrero@edf.fr>  Fri, 11 Sep 2015 15:36:22 +0200

clara (0.20150911) calibre9; urgency=medium

  * 'clara p2p': use the same format in the configuration file for 'seeders'
    that the one used for 'trackers'.

 -- Ana Guerrero <ana-externe.guerrero@edf.fr>  Fri, 11 Sep 2015 10:14:09 +0200

clara (0.20150903+athos) calibre7; urgency=medium

  * Backport for Athos.

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Thu, 03 Sep 2015 11:25:59 +0200

clara (0.20150903) calibre8; urgency=medium

  * 'clara p2p': trackers needed to be update somewhere else after the
    configuration updates to include torrent files. Fixed now.

 -- Ana Guerrero <ana-externe.guerrero@edf.fr>  Thu, 03 Sep 2015 11:09:25 +0200

clara (0.20150825) calibre8; urgency=medium

  * 'clara ipmi': add commands sellist and selclear.
  * Add build-depends on texlive-fonts-recommended.
